# PNPPK

./: README.md
Task1/: CMakeLists.txt  main.cpp  main.h  test.cpp
Task2/: CMakeLists.txt  main.cpp  main.h  test.cpp
Task3/: CMakeLists.txt  main.cpp  main.h  test.cpp
Task4/: CMakeLists.txt  main.cpp  main.h  test.cpp
Task5/: CMakeLists.txt  main.cpp  main.h  test.cpp
